@@ -1,7 +1,7 @@
 ﻿#region Copyright
 
 ///////////////////////////////////////////////////////////////////////////////
-//  File: SKColorDebuggerVisualizer.cs
+//  File: SkiaCustomColorDebuggerVisualizer.cs
 ///////////////////////////////////////////////////////////////////////////////
 //  Copyright (C) KGy SOFT, 2005-2024 - All Rights Reserved
 //
@@ -27,7 +27,7 @@ namespace KGySoft.Drawing.DebuggerVisualizers.SkiaSharp.DebuggerVisualizers
 {
     [SuppressMessage("Microsoft.Performance", "CA1812:AvoidUninstantiatedInternalClasses",
         Justification = "False alarm, instantiated by VS debugger visualizers")]
-    internal sealed class SKColorDebuggerVisualizer : DialogDebuggerVisualizer
+    internal sealed class SkiaCustomColorDebuggerVisualizer : DialogDebuggerVisualizer
     {
         #region Methods
 
